--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   dropdown_button2: ^1.9.2
   encrypt: ^5.0.1
   loading_animation_widget: ^1.2.0+2
-
+  cached_network_image: ^3.2.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
