--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   riverpod_annotation: ^1.1.1
   dropdown_button2: ^1.9.2
   encrypt: ^5.0.1
+  gradient_borders: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
