--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^3.0.0
+  image_picker: ^0.8.7+4
+  photo_manager: ^2.6.0
 
 dev_dependencies:
   flutter_test:
