--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   photo_manager: ^2.6.0
   card_swiper: ^2.0.4
   web_socket_channel: ^2.4.0
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
