--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   web_socket_channel: ^2.4.0
   permission_handler: ^10.3.0
   flutter_sound: ^9.2.13
+  path_provider: ^2.0.15
+  circle_progress_bar: ^0.1.2
 
 dev_dependencies:
   flutter_test:
