--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   card_swiper: ^2.0.4
   web_socket_channel: ^2.4.0
   flutter_secure_storage: ^8.0.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
