0620update_建置音訊對話框UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_sound: ^9.2.13
   path_provider: ^2.0.15
   circle_progress_bar: ^0.1.2
+  audio_waveforms: ^1.0.4
 
 dev_dependencies:
   flutter_test:
