--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,8 @@ end
 
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 
+platform :ios, '10.0'
+
 flutter_ios_podfile_setup
 
 target 'Runner' do
