--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
    <application
+        android:usesCleartextTraffic="true"
         android:label="mygram"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
