--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:usesCleartextTraffic="true"
         android:label="mygram"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+       >
         <activity
             android:name=".MainActivity"
             android:exported="true"
