--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,6 +125,7 @@ flutter:
     - assets/icon/pitch/dynamic/self/
     - assets/icon/pitch/dynamic/other/
     - assets/icon/pitch/personal/
+    - assets/icon/pitch/create/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
