--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   audio_waveforms: ^1.0.4
   transparent_image: ^2.0.1
   just_waveform: ^0.0.5
+  just_audio: ^0.9.34
 
 dev_dependencies:
   flutter_test:
