--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   circle_progress_bar: ^0.1.2
   audio_waveforms: ^1.0.4
   transparent_image: ^2.0.1
+  lottie: ^1.4.3
 
 dev_dependencies:
   flutter_test:
@@ -102,6 +103,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/webpages/
+    - assets/animation/
     - assets/translations/
     - assets/fonts/
     - assets/icon/img/
