--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   just_waveform: ^0.0.5
   just_audio: ^0.9.34
   audioplayers: ^4.1.0
+  flutter_audio_waveforms: ^1.2.1+8
 
 dev_dependencies:
   flutter_test:
@@ -128,6 +129,7 @@ flutter:
     - assets/icon/pitch/dynamic/self/
     - assets/icon/pitch/dynamic/other/
     - assets/icon/pitch/personal/
+    - assets/dm.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
