0629update_修正動態頁霧面玻璃效果

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   audioplayers: ^4.1.0
   flutter_audio_waveforms: ^1.2.1+8
   lottie: ^1.4.3
+  glassmorphism_widgets: ^0.2.2
 
 dev_dependencies:
   flutter_test:
