--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_audio_waveforms: ^1.2.1+8
   lottie: ^1.4.3
   glassmorphism_widgets: ^0.2.2
+  device_info_plus: ^9.0.2
 
 dev_dependencies:
   flutter_test:
