0707update_研究浮動日期

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   lottie: ^1.4.3
   glassmorphism_widgets: ^0.2.2
   shimmer: ^3.0.0
+  inview_notifier_list: ^3.0.0
 
 dev_dependencies:
   flutter_test:
